layout imrovment-3 with Responsive

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <div class="search-wrapper">
                     <input type="search" name="search" placeholder="Search City"
                     autocomplete="off" class="search-field"
-                    data-search-field>
+                    data-search-field>x
 
-                    <span class="m-icon">search</span>
+                    <span class="m-icon leading-icon">search</span>
 
                     <button class="icon-btn leading-icon has-state" aria-label="close
                     search" data-search-toggler>
@@ -576,7 +576,7 @@
     </main>
 
 
- 
+
 
     <script src="./assets/js/app.js" type="module"></script>
     <script src="./assets/js/route.js" type="module"></script>
