--- a/index.html
+++ b/index.html
@@ -561,7 +561,9 @@
 
 
 
-    <script src="./assets/js/app.js" type="module"></script>
-    <script src="./assets/js/route.js" type="module"></script>
+    <script src="./assets/js/app.js" type="app"></script>
+    <script src="./assets/js/route.js" type="route"></script>
+    <script src="./assets/js/api.js" type="api"></script>
+    <script src="./assets/js/module.js" type="module"></script>
 </body>
 </html>
