--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     
-    <title>weatherio</title>
+    <title>WeatherForecast</title>
     <meta name="title" content="weatherio">
     <meta name="description" content="weatherio is a weather app made by codewithsadee">
 
